# group-management-ui-backend

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMIT_MESSAGE.txt  HTR.md  Makefile  PATH_VERIFICATION.md  POST_REORGANIZATION_CHECKLIST.md  QUICKSTART.md  QWEN.md  README.md  RELEASE_PROCESS.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  UNPLUGGED_MOCK_DATA.md  connector-uninstall.sh  docker-compose.test.yml  docker-compose.yml  twingate-clone-architecture-guide.md
.github/workflows/: release-client-rs.yml  release-connector-rs.yml  release-tunneler-rs.yml
.next/dev/: prerender-manifest.json  trace
app/: page.tsx
apps/frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
backend/: .gitignore  README.md
backend/connector/: connector.md
backend/connector-rs/: Cargo.toml
backend/controller/: .air.toml  .env  RUN.md  go.mod  go.sum  main.go  run-air.sh
backend/tunneler-rs/: Cargo.toml  build.rs
components/dashboard/: sidebar.tsx
docker/: Dockerfile.agent  Dockerfile.connector  README.md  entrypoint-agent.sh  entrypoint-connector.sh
docker/env/: .gitignore
docker/nginx/: resource-1.html  resource-2.html
docs/: agent-discovery.md  architecture.md  bff-auth-migration.md  branch-installers.md  development.md  workspace-ca-control-plane.md
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tsconfig.server.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/app/: layout.tsx
frontend/lib/: data.ts  db.ts  device-profiles.ts  mock-api.ts  proxy.ts  resource-policies.ts  sign-in-policy.ts  types.ts
frontend/server/: index.ts
frontend/src/: App.tsx  main.tsx
lib/: mock-api.ts  types.ts
mobile/android/: .gitignore  gradlew  gradlew.bat  local.properties.template  settings.gradle.kts
scripts/: agent-setup.sh  client-install-release.sh  client-setup.sh  docker-test-clean.sh  docker-test-destroy.sh  docker-test-setup.sh  docker-test-teardown.sh  global_agent.sh  install-agent.sh  install-connector.sh  install-tunneler.sh  install.sh  reorganize.sh  setup-db.sh  setup-rs.sh  setup.sh  truncate-db.sh  tunneler-setup.sh  uninstall-client.sh  uninstall-connector.sh  uninstall-tunneler.sh
services/ztna-client/: Cargo.toml  client-run.md
services/ztna-client-mobile/: Cargo.toml  build.rs  uniffi.toml  ztna.udl
services/ztna-client-mobile/src/: auth.rs  lib.rs  token_store.rs  ztna.udl
services/ztna-client/src/: acl.rs  auth.rs  config.rs  framing.rs  main.rs  posture.rs  product.rs  quic_tunnel.rs  server.rs  service_auth.rs  socks5.rs  token_store.rs  tun.rs  tun_dns.rs  tun_dns_intercept.rs  tun_routing.rs  tunnel.rs
services/ztna-client/src/proto/: controller.v1.rs
systemd/: agent.service  connector.service  grpcconnector2.service  grpctunneler.service  tunneler.service  ztna-client.service
(+1457 files in other folders)
