[package]
name = "ztna-client-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "ztna"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uniffi = { version = "0.28", features = ["tokio", "cli", "bindgen"] }
p256 = { version = "0.13", features = ["pem", "pkcs8", "ecdsa"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
