[package]
name = "ztna-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ztna-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
p256 = { version = "0.13", features = ["pem", "pkcs8", "ecdsa"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
chrono = "0.4"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5" }
http = "1"
pem = "3"
keyring = "3"
aes-gcm = "0.10"

[build-dependencies]
tonic-build = "0.12"
